--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
     </header>
     <section class="hero" id="hero">
         <div class="intro-info">
-            <div class="intro"><h3>I'm </h3><h1>Ashish Mishra</h1></div>
-            <div class="intro-sub">Developer</div>
+            <div class="intro-head"><h3>I'm </h3><h1>Ashish<br> Mishra</h1></div>
+            <div class="intro-sub"><p>Developer</p></div>
             <div class="cta-btn">
-                <a href="#">Download Resume</a> 
+                <a href="#">Resume</a> 
             </div>
         </div>
         <div class="hero-img" ><img  src="for_w_sm.png"></div>
         <div class="svg-style">
-            <img src="download2.svg" alt="">
+            <img src="download.svg" alt="">
         </div>
         
      
