added all images

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <img src="download.svg" alt="">
         </div> -->
         <div id="hero-img" class="hero-img" ><img  src="for_w_sm.png"></div>
+        <div id="hero-img-tab" class="hero-img-tab" ><img  src="for_w_sm.png"></div>
         
         
     </section>
