--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="svg-style">
+        <div class="svg-style">
             <img src="download.svg" alt="">
-        </div> -->
+        </div>
         <div id="hero-img" class="hero-img" ><img  src="for_w_sm.png"></div>
         <div id="hero-img-tab" class="hero-img-tab" ><img  src="for_w_sm.png"></div>
         
