--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="header-wrapper" class="header-wrapper">
             
             <div id="logo" class="logo"><a href="index.html">
-                <img src="img/main-sign-blur.png" ></a>
+                <img src="img/logo.png" ></a>
             </div>
             <button class="nav-btn">
                 <div class="hamburger"></div>
