--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <link href="css/test.css" rel="stylesheet">
     <link href="assets/vendor/fontawesome-free-5.15.1-web/css/all.css" rel="stylesheet">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -62,29 +63,29 @@
             </div>
             <div class="cta">
                 <div class="main-cta-btn">
-                    <a href="#">Hire Me</a>
+                    <a target="_blank" href="https://www.linkedin.com/in/ashish--mishra">Hire Me</a>
                 </div>
                 <div class="main-cta-btn">
-                    <a href="#">Resume</a>
+                    <a target="_blank" href="docs/Ashish's Resume.pdf">Resume</a>
                 </div>
             </div>
 
             <div class="social-links">
                 <div class="link-1 links-s">
                     <img src="img/small-squares.svg" alt="">
-                    <a href="#"><i class="fab fa-github-square"></i></a>
+                    <a target="_blank" href="https://codepen.io/Da_devloper"><i class="fab fa-codepen"></i></a>
                 </div>
                 <div class="link-2 links-s">
                     <img src="img/small-squares.svg" alt="">
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/aminumb009/"><i class="fab fa-instagram-square"></i></a>
                 </div>
                 <div class="link-3 links-s">
                     <img src="img/small-squares.svg" alt="">
-                    <a href="#"><i class="fab fa-instagram-square"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/ashish--mishra"><i class="fab fa-linkedin"></i></a>
                 </div>
                 <div class="link-4 links-s">
                     <img src="img/small-squares.svg" alt="">
-                    <a href="#"><i class="fab fa-codepen"></i></a>
+                    <a target="_blank" href="https://github.com/Ashking009"><i class="fab fa-github-square"></i></a>
                 </div>
             </div>
         </div>
@@ -105,14 +106,14 @@
                                 </svg>
                             </div>
         <div class="container">
-            <div id="section-title">
-                <h2>About Me</h2>
+            <div id="section-title" data-aos="fade-right"> 
+                <h2 >About Me</h2>
             </div>
             <div class="image-about-small">
                 <img src="img/for_w_sm.png" alt="">
             </div>
             <div id="image-upto" class="grid-view">
-                <div class="about-para cols">
+                <div class="about-para cols" data-aos="fade-right">
 
                     <p>
                         Hey, I am Ashish Mishra, a Passionate self-taught developer based
@@ -132,18 +133,18 @@
 
 
             <!-- My-Skills -->
-            <div id="skills" class="my-skills" style="position: relative;">
-                <div id="section-subtitle">
+            <div id="skills" class="my-skills" style="position: relative;" >
+                <div id="section-subtitle" data-aos="fade-right">
                     <h2>My Skills</h2>
                 </div>
-                <div class="outer-parallax">
+                <div class="outer-parallax" data-aos="fade-right">
                     <i class="fab fa-css3-alt"></i>
                     <i class="fab fa-python"></i>
                     <i class="fab fa-unity"></i>
                     <img src="img/c++.svg">
                     <i class="fab fa-js-square"></i>
                 </div>
-                <div class="inner-parallax  ">
+                <div class="inner-parallax " data-aos="fade-right">
                     <p style="top: 30%; left: 36%; font-size: 3em;"><i class="fab fa-html5"></i></p>
                     <p style="top: 0%; left: 93%; font-size: 2em;">C#</p>
                     <p style="top: 8%; left: 0%; font-size: 1em;">blender</p>
@@ -158,13 +159,13 @@
 
             <!-- What-I-Do -->
             <div id="what-i-do" class="what-i-do">
-                <div id="section-subtitle">
+                <div id="section-subtitle" data-aos="fade-right">
                     <h2>What I Do</h2>
                 </div>
                 <div class="flex-b3">
                     <div class="game">
 
-                        <div class="game-dev">
+                        <div class="game-dev" data-aos="fade-right">
                             <img src="img/man.svg" alt="">
                             <h4 class="align-center">Game Dev</h4>
                             <p>
@@ -178,7 +179,7 @@
                         </div>
                     </div>
                     <div class="web">
-                        <div class="web-dev">
+                        <div class="web-dev" data-aos="fade-right">
                             <h4 class="align-center">Web <div class="tilted">Dev</div>
                             </h4>
                             <p>
@@ -195,7 +196,7 @@
                     </div>
 
                     <div class="graphics" style="position: relative;">
-                        <div class="graphics-design ">
+                        <div class="graphics-design " data-aos="fade-right">
                             <h4 class="align-center">Graphic Design</h4>
                             <p>
                                 It all started as an experiment for change and had became a part of my life.
@@ -226,15 +227,15 @@
             </svg>
         </div>
         <div class="container">
-            <div id="section-title">
+            <div id="section-title" data-aos="fade-right">
                 <h2>My Projects</h2>
             </div>
 
             <div class="project-wrapper">
 
                 <!-- <div class="100pxw"></div> -->
-                <div class="project-text">
-                    <div class="project-content">
+                <div class="project-text" data-aos="fade-right">
+                    <div class="project-content" >
                         <h2>zlftoken.org</h2>
                         <p>
                             Zlftoken.org is a full fledged website curated for an e-commerce and direct marketing
@@ -265,9 +266,9 @@
                     </div>
 
                 </div>
-                <div class="project-view">
+                <div class="project-view" data-aos="fade-right">
                     <div class="project-graphics">
-                        <img src="img/zlf-360.jpg" alt="zlf-wibsite">
+                        <img src="img/zlf-360.jpg" alt="zlf-website">
                     </div>
                 </div>
             </div>
@@ -275,7 +276,7 @@
             <div class="project-wrapper">
 
                 <!-- <div class="100pxw"></div> -->
-                <div class="project-text">
+                <div class="project-text" data-aos="fade-right">
                     <div class="project-content">
                         <h2>Mad Island</h2>
                         <p>
@@ -289,21 +290,21 @@
                     </div>
                     <div class="more-info">
                         <div class="get-it">
-                            <a class="cta-btn-square" href="#"><i class="fab fa-github"></i></a>
-                            <a class="cta-btn" href="#">More</a>
+                            <a class="cta-btn-square" href="https://github.com/Ashking009/Mad-Island"><i class="fab fa-github"></i></a>
+                            <!-- <a class="cta-btn" href="#">More</a> -->
                             <!-- <a class="cta-btn" href="#">Star Repo</a> -->
 
                         </div>
                         <div class="tech-used">
                             <i title="Python" class="fab fa-python"></i>
                             <img title="Tiled" src="img/tiled.svg" alt="" width="32px">
-                            <!-- <i title="Python"class="fab fa-python"></i> -->
+                           
                         </div>
                     </div>
 
 
                 </div>
-                <div class="project-view">
+                <div class="project-view" data-aos="fade-right">
                     <div class="project-graphics">
                         <img src="img/mad-island-360.jpg" alt="">
                     </div>
@@ -313,7 +314,7 @@
             <div class="project-wrapper">
 
                 <!-- <div class="100pxw"></div> -->
-                <div class="project-text">
+                <div class="project-text" data-aos="fade-right">
                     <div class="project-content">
                         <h2>Ethination</h2>
                         <p>
@@ -339,7 +340,7 @@
                     </div>
 
                 </div>
-                <div class="project-view" style="position: relative;">
+                <div class="project-view" style="position: relative;" data-aos="fade-right">
                     <div class="project-graphics">
                         <img src="img/ethination.jpg" alt="">
                     </div>
@@ -357,7 +358,7 @@
             <div class="project-wrapper">
 
                 <!-- <div class="100pxw"></div> -->
-                <div class="project-text">
+                <div class="project-text" data-aos="fade-right">
                     <div class="project-content">
                         <h2>Kill Corona</h2>
                         <p>
@@ -372,9 +373,9 @@
                     </div>
                     <div class="more-info">
                         <div class="get-it">
-                            <a title="Github" class="cta-btn-square" href="#"><i class="fab fa-github"></i></a>
-                            <a title="Learn More" class="cta-btn" href="#">More</a>
-                            <!-- <a title="Visit Site" class="cta-btn" href="#">Visit</a> -->
+                            <a title="Github" class="cta-btn-square" href="https://github.com/Ashking009/Kill-Corona"><i class="fab fa-github"></i></a>
+                            <!-- <a title="Learn More" class="cta-btn" href="#">More</a> -->
+                           
 
                         </div>
                         <div class="tech-used">
@@ -383,9 +384,9 @@
                     </div>
 
                 </div>
-                <div class="project-view">
+                <div class="project-view" data-aos="fade-right">
                     <div class="project-graphics">
-                        <img src="img/kill-corona-360.jpg" alt="zlf-wibsite">
+                        <img src="img/kill-corona-360.jpg" alt="Kill-Corona">
                     </div>
                 </div>
             </div>
@@ -409,22 +410,22 @@
     <section id="contact-me" class="contact-me">
 
         <div class="container">
-            <div id="section-title">
+            <div id="section-title" data-aos="fade-right">
                 <h2>Contact Me</h2>
             </div>
 
-            <div class="wrapper-all">
+            <div class="wrapper-all" data-aos="fade-right">
                 <div class="contact-image">
                     <i class="fas bob-updown fa-mail-bulk" style="font-size: 120px; color: #4961DC; padding: 25px;"></i>
                     <div class="social">
                         <div class="links">
-                            <a href="#"><i class="fab fa-github-square"></i></a>
+                            <a href="https://github.com/Ashking009"><i class="fab fa-github-square"></i></a>
 
-                            <a href="#"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/ashish--mishra/"><i class="fab fa-linkedin"></i></a>
 
-                            <a href="#"><i class="fab fa-instagram-square"></i></a>
+                            <a href="https://www.instagram.com/aminumb009/"><i class="fab fa-instagram-square"></i></a>
 
-                            <a href="#"><i class="fab fa-codepen"></i></a>
+                            <a href="https://codepen.io/Da_devloper"><i class="fab fa-codepen"></i></a>
                         </div>
                         <div class="mail">
                             <a href="mailto:mishrashish0@gmail.com">@email</a>
@@ -432,7 +433,7 @@
                     </div>
                 </div>
 
-                <div class="wrapper-contact">
+                <div class="wrapper-contact" data-aos="fade-right"> 
                     <form class="contact-form" novalidate action="https://formspree.io/f/mgepykgo" method="POST">
 
                         <div class="wrap-inputs wrap-name-contact">
@@ -469,6 +470,7 @@
     </footer>
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
 
 </body>
 
