--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <h2 >About Me</h2>
             </div>
             <div class="image-about-small">
-                <img src="img/for_w_sm.png" alt="">
+                <img src="img/small-img.png" alt="">
             </div>
             <div id="image-upto" class="grid-view">
                 <div class="about-para cols" data-aos="fade-right">
@@ -126,7 +126,7 @@
                     </p>
                 </div>
                 <div class="image-about cols">
-                    <div id="abt-img" class="abt-img"><img src="img/for_w_sm.png"></div>
+                    <div id="abt-img" class="abt-img"><img src="img/small-img.png"></div>
                 </div>
             </div>
 
